--- a/src/guides/Introduction.stories.mdx
+++ b/src/guides/Introduction.stories.mdx
@@ -114,7 +114,7 @@ import StackAlt from '../assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to Asset Library
+# Welcome to Teams React Component Factory
 
 Asset Library helps you build UI components in isolation from your app's business logic, data, and context.
 This can help you understand the changes which will appear in the UI based on the props values.
