Logo Changes , Text Changes

--- a/src/guides/Introduction.stories.mdx
+++ b/src/guides/Introduction.stories.mdx
@@ -114,9 +114,9 @@ import StackAlt from '../assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to Asset Library
+# Welcome to Teams Component Factory
 
-Asset Library helps you build UI components in isolation from your app's business logic, data, and context.
+Teams Component Factory helps you build UI components in isolation from your app's business logic, data, and context.
 This can help you understand the changes which will appear in the UI based on the props values.
 
 This library covers the MS teams with Fluent UI components. Reference Link provided below.
